concord_examples/tests/ui/policy_param_decl_removed.rs
use concord_macros::api;

api! {
    client UiPolicyParamDeclRemoved {
        scheme: https,
        host: "example.com",
    }

    GET Search -> Json<()> {
        query {
            page: u32
        }
    }
}

fn main() {}
